# tri

./: CMakeLists.txt  README.md  main.cpp  tri.h
tests/: CMakeLists.txt  tests_tri.cpp
